# finger

./: .gitignore  AGENTS.md  CACHE.md  IMPLEMENTATION_STATUS.md  LICENSE  MEMORY.md  README.md  TASK.md  agent-architecture-summary.md  entities.json  eslint.config.js  mempalace.yaml  my-agent.yaml  note.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
.beads/: config.yaml  issues.jsonl  last-touched
.hypatia/: project.toml
agents-prompts-md/: coder.md  executor.md  orchestrator.md  planner.md  reviewer.md  router.md  understanding.md  verifier.md
docs/: AGENT_CONTEXT_DESIGN.md  AGENT_JSON_CONFIG.md  AGENT_MANAGEMENT_IMPLEMENTATION_PLAN.md  AGENT_ROLES.md  AGENT_RUNTIME_AND_SESSION_LIFECYCLE.md  ARCHITECTURE.md  BD_AGENT_DESIGN.md  BD_WORKFLOW.md  CLI_CALL_FLOW.md  CLI_DESIGN.md  CLI_IMPLEMENTATION_PLAN.md  CLI_PLUGIN.md  CLI_README.md  CONTEXT_PARTITION_RULES.md  EVENT_BUS_DESIGN.md  IMPLEMENTATION_SUMMARY.md  NETWORK_ARCHITECTURE.md  ORCHESTRATOR_TEMPLATES_AND_FLOW.md  RESOURCE_POOL_DESIGN.md  ROLE_CLEANUP_ANALYSIS.md  ROLE_CLEANUP_SUMMARY.md  ROUTER_AGENT_DESIGN.md  ROUTER_ARCHITECTURE.md  RUNTIME_SPEC.md  STOP_START_COMMANDS.md  TASK_LIFECYCLE.md  codex-kernel-ui-react-analysis.md  context-architecture-truth-source.md  evolution-system-design.md  insights-evolution-design.md  memory-evolution-plan.md  messagehub-command-auth-design.md  operation-event-communication-architecture.md  orchestrator-design.md  prompt-optimization-design.md  system-agent-manual-verification.md  system-agent-test-plan.md  user-settings-schema.md
memory/: 2025-03-13_system-agent-runtime-verification.md  2025-03-13_system-agent-setup.md  2026-03-06-agent-drawer-width-fix.md  2026-03-06-agent-prompts-override.md  2026-03-06-commit-scope-and-agent-prompts.md  2026-03-07-agent-enable-toggle-and-quota-copy.md  2026-03-07-agent-prompt-editor-modal.md  (+32 more)
rust/: Cargo.toml  README.md  lcov.info
rust/kernel-bridge-bin/: Cargo.toml
rust/kernel-bridge-bin/src/: main.rs
rust/kernel-config/: Cargo.toml
rust/kernel-config/src/: lib.rs
rust/kernel-context-ledger/: Cargo.toml
rust/kernel-context-ledger/src/: lib.rs
rust/kernel-core/: Cargo.toml
rust/kernel-core/src/: lib.rs
rust/kernel-evolution/: Cargo.toml
rust/kernel-evolution/src/: learning_extractor.rs  lib.rs  memory_writer.rs  types.rs
rust/kernel-evolution/src/mempalace_bridge/: cli.rs  mod.rs  query.rs  sync.rs
rust/kernel-evolution/tests/: integration_test.rs
rust/kernel-ledger/: Cargo.toml
rust/kernel-ledger-cli/: Cargo.toml
rust/kernel-ledger-cli/src/: main.rs
rust/kernel-ledger/src/: backfill.rs  compact.rs  lib.rs  reader.rs  rebuild.rs  task_digest.rs  types.rs  writer.rs
rust/kernel-model/: Cargo.toml
rust/kernel-model/src/: anthropic_engine.rs  lib.rs
rust/kernel-model/src/protocol/: mod.rs  request.rs  response.rs  transport.rs
rust/kernel-model/src/protocol/anthropic/: mod.rs  request.rs  response.rs  transport.rs
rust/kernel-protocol/: Cargo.toml
rust/kernel-protocol/src/: lib.rs
(+2142 files in other folders)
