[package]
name = "finger-kernel-bridge-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
finger-kernel-config = { path = "../kernel-config" }
finger-kernel-core = { path = "../kernel-core" }
finger-kernel-model = { path = "../kernel-model" }
finger-kernel-protocol = { path = "../kernel-protocol" }
serde_json.workspace = true
tokio.workspace = true
