[package]
name = "finger-kernel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
finger-kernel-protocol = { path = "../kernel-protocol" }
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
