[package]
name = "finger-kernel-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
finger-kernel-config = { path = "../kernel-config" }
finger-kernel-context-ledger = { path = "../kernel-context-ledger" }
finger-kernel-core = { path = "../kernel-core" }
finger-kernel-protocol = { path = "../kernel-protocol" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
tokio.workspace = true
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tokio.workspace = true
mockito = "1.7"
